Update Blog “2023-08-08-blog-1-title”

--- a/content/blog/2023-08-08-blog-1-title.md
+++ b/content/blog/2023-08-08-blog-1-title.md
@@ -1,5 +1,5 @@
 ---
-title: Blog 1 Title
+title: My First blog
 date: 2023-08-08T09:00:50.152Z
 description: A description detailing an overview of blog 1
 ---
